# OranGE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
OranGE/: CMakeLists.txt
OranGE/include/: OranGE.h  pch.h
OranGE/include/application/: Application.h
OranGE/include/core/: Event.h  Log.h  types.h
OranGE/include/platform/: Window.h
OranGE/include/utils/: Clock.h
OranGE/src/application/: Application.cpp
OranGE/src/core/: Log.cpp
OranGE/src/platform/: GLFWWindow.cpp
OranGE/src/utils/: Clock.cpp
engine/: CMakeLists.txt  OranGE-Core.h  defines.h  include.h
engine/core/: Application.cpp  Application.h  Log.cpp  Log.h
engine/platform/: Event.h  Platform.cpp  Platform.h
engine/render/: Buffer.h  Context.h  Device.cpp  Device.h  Renderer.cpp  Renderer.h
engine/resources/: Mesh.cpp  Mesh.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
engine/utils/: Clock.h
notes/: buffer.md  phase0-foundation.md  phase1-RHI.md
sandbox/: CMakeLists.txt  main.cpp
sandbox/cubes/: camera.cpp  main.cpp
sandbox/hello-triangle/: main.cpp
sandbox/src/: main.cpp
src/: main.cpp  stb.cpp
src/render/: gl_program.cpp  gl_program.h  gl_resource.h  gl_texture.h
src/utils/: file.h
